# shree-ganesh-model

./: .gitignore  AGENTIC_README.md  AGENTS.md  ARCHITECTURE.md  CONSTITUTION.md  HANDOFF.md  README.md  RECOVERY.md  SHOWCASE.html  index.html  pyproject.toml  vercel.json
assets/: recreation_manifest.json
configs/: com.shree-ganesh.daily-refresh.plist  com.zoom.daily-pipeline.plist  ml_expert.yaml  ml_research.yaml  ml_weekly_production.yaml  screening.yaml
data/: README.md
data_contracts/: daily_screen_universe.yaml  sector_flow_fortnightly.yaml  stock_daily_facts.yaml  stock_master.yaml  stock_quarterly_fundamentals.yaml  stock_shareholding_quarterly.yaml
docs/: data_dictionary.md  data_storage.md  lag_rules.md  ml_research_pipeline.md  ml_weekly_winners.md  nse_ingestion.md  production_automation.md  proxy_signals.md  source_limitations.md  stateful_weekly_portfolio.md  strategy_2x_in_90d.md
live_predictions/: 2026-05-04.json  2026-05-05.json  2026-05-05_v2_post_rerun.json  2026-05-05_v3_post_contamination_audit.json  2026-05-08.json  2026-05-19.json  2026-05-21.json  2026-05-27_FINAL_15d_deploy.json  2026-05-27_consofinvt_refreshed.json  2026-05-27_consofinvt_single_pick.json  2026-05-27_full_ml_ensemble.json  2026-06-01_FIRST2WEEKS_JUNE.json  2026-06-01_QC_REVISED.json  2026-07-07_15d5pct.json  2026-07-07_rationale_data.json
logs/: agent_loop_cycles.jsonl  calibration_corrections.jsonl  debt_ledger.jsonl  hypothesis_loop_log.jsonl  simplicity_metrics.jsonl
prompts/: 00_SYSTEM_PRINCIPLES.md  01_HYPOTHESIS_GENERATOR.md  02_DATA_FETCHER.md  INDEX.md  (+5 more)
(+340 files in other folders)
