[project]
name = "indian-equities-research-pipeline"
version = "0.1.0"
description = "Leak-safe NSE equities research pipeline for daily screening and backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.6.0",
  "scipy>=1.13.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "lxml>=5.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
